--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="cta-container">
-            <a href="https://topsmm24.com" class="btn">Visit TopSMM24</a>
+            <a href="https://topsmm24.com" class="btn">Visit Top SMM 24 (formerly Top SMM Panel)</a>
         </div>
 
         <div class="timeline-header">
